# STOVEplayer

./: .gitignore  README.md  __init__.py  modSTOVE_pretraining.py  purge_checkpoints.py  pyproject.toml  requirements.txt  requirements_environment.txt  setup.sh
agent/: __init__.py  stove_player.py
agent/modSTOVE/: __init__.py  decoder.py  dynamics.py  image_model.py  model.py  slot_encoder.py
environment/: __init__.py  agent_controller.py  env.py  physics.py  room.py
gui/: __init__.py  play.py  viewer.py
